# DNS-server

./: README.md  config.yaml  pyproject.toml
src/dns_server/: __init__.py  __main__.py  cli.py  config.py  protocol.py  records.py  server.py
